--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "build:formly-lowcode": "ng build formly-lowcode && node version path=./dist/formly-lowcode/version",
-    "publish:formly-lowcode": "cd dist/formly-lowcode &&　npm publish --access public"
+    "publish:formly-lowcode": "cd dist/formly-lowcode &&　npm publish --access public",
+    "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
+    "storybook": "npm run docs:json && start-storybook -p 6006",
+    "build-storybook": "npm run docs:json && build-storybook -o site-storybook "
   },
   "private": true,
   "dependencies": {
@@ -20,22 +23,32 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "@xmagic/nzx-antd": "^13.3.3",
+    "@ngx-formly/core": "^6.0.0-rc.0",
     "@xmagic/nz-formly": "^13.3.3",
+    "@xmagic/nzx-antd": "^13.3.3",
+    "echarts": "^5.3.2",
     "ng-zorro-antd": "^13.4.0",
     "ngx-echarts": "^8.0.1",
-    "@ngx-formly/core": "^6.0.0-rc.0",
-    "echarts": "^5.3.2"
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.2",
     "@angular/cli": "~13.3.2",
     "@angular/compiler-cli": "~13.3.0",
+    "@babel/core": "^7.18.10",
+    "@compodoc/compodoc": "^1.1.19",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/angular": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/testing-library": "0.0.13",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "babel-loader": "^8.2.5",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -43,9 +56,10 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^13.0.0",
-    "typescript": "~4.6.2",
     "prettier": "^2.6.2",
     "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "~4.6.2",
+    "react-textarea-autosize": "8.3.4"
   }
 }
